fix fdo#58403 fix processing of arguments from ".uno:Print" request

Change-Id: I011c2ea45d33ead14910e149a99ee8e587ef79b9